fix alignment of scratchpad preview with template

--- a/src/components/apps/OuroborosFlight/Scratchpads/Scratchpads.scss
+++ b/src/components/apps/OuroborosFlight/Scratchpads/Scratchpads.scss
@@ -143,6 +143,7 @@
   position: absolute;
   top: 0px;
   left: 20px;
+  transform: scale(0.9) translate(-18px, -10px);
 }
 .mini-preset-positioner {
   position: absolute;
